--- a/sites/travellingchair.net/themes/tchair_ohm/sass/partials/_components.scss
+++ b/sites/travellingchair.net/themes/tchair_ohm/sass/partials/_components.scss
@@ -20,8 +20,10 @@
 @import "components/menus/breadcrumb";
 @import "components/menus/action-links";
 @import "components/menus/main-menu";
+@import "components/menus/mob-menu";
 // Blocks
 @import "components/blocks/nav-bar";
+@import "components/blocks/ratings";
 // Comments
 @import "components/comments/comment-wrapper";
 @import "components/comments/comment";
