--- a/sites/travellingchair.net/themes/tchair_ohm/sass/layouts/ohm-hero/ohm-hero-layout.scss
+++ b/sites/travellingchair.net/themes/tchair_ohm/sass/layouts/ohm-hero/ohm-hero-layout.scss
@@ -26,17 +26,9 @@ body {
 .l-region--header {
   @include span-columns(12, 12);
   display: none;
-  border-top: 1px solid $dark-blue;
 }
 .l-region--navigation {
   @include span-columns(3 omega, 12);
-  a#mob-menu {
-    float: right;
-    width: 100%;
-    height: 80px;
-    border-left: 1px solid $dark-blue;
-    background: image-url('menu-icon.png') center center no-repeat;
-  }
 }
 
 /* Content Area */
@@ -51,6 +43,7 @@ body {
 .l-main {
   margin-top: 0;
   margin-bottom: 2 * $vert-spacing-unit;
+  padding: 0 $horz-spacing-unit;
 }
 
 /* Sidebars */
