--- a/sites/travellingchair.net/themes/tchair_ohm/sass/partials/base/_typography.scss
+++ b/sites/travellingchair.net/themes/tchair_ohm/sass/partials/base/_typography.scss
@@ -49,8 +49,11 @@ h6, .zeta {
 }
 
 h1, .alpha {
-  @include font-size(55px);
+  @include font-size(48px);
   font-weight: 700;
+  @include at-breakpoint($tab) {
+    @include font-size(55px);
+  }
 }
 h2, .beta {
   @include font-size(28px);
