--- a/sites/travellingchair.net/themes/tchair_ohm/sass/partials/components/blocks/_ratings.scss
+++ b/sites/travellingchair.net/themes/tchair_ohm/sass/partials/components/blocks/_ratings.scss
@@ -4,6 +4,7 @@
   .field {
     margin-bottom: 0.5em;
   }
+  // category icon
   .field--name-field-category {
     width: 32px;
     position: absolute;
@@ -11,6 +12,7 @@
       margin-right: 0;
     }
   }
+  // review title
   .field--name-field-title {
     @include font-size(28px);
     margin-left: 40px;
@@ -20,12 +22,24 @@
   }
   .rate-info {
     @include clearfix(true);
-    span.label {
+    .label {
       line-height: 2em;
-      width: 5em;
+      width: 6em;
       margin-right: $horz-spacing-unit;
       float: left;
+      padding-left: 2em
     }
+    // label icons
+    .label.visual {
+      background: url(../images/icon_visual.gif) left center no-repeat;
+    }
+    .label.hearing {
+      background: url(../images/icon_hearing.gif) left center no-repeat;
+    }
+    .label.mobility {
+      background: url(../images/icon_mobility.gif) left center no-repeat;
+    }
+    // rating bar
     .result {
       float: left;
       line-height: 2em;
@@ -45,18 +59,6 @@
       }
     }
   } //.rate-info
-
-
-  // Percentage bar
-  .group_visual .result{
-    background: url(../images/icon_visual.gif) left center no-repeat;
-  }
-  .group_hearing .result{
-    background: url(../images/icon_hearing.gif) left center no-repeat;
-  }
-  .group_mobility .result{
-    background: url(../images/icon_mobility.gif) left center no-repeat;
-  }
   
   @include at-breakpoint($tab) {
     .group-teaser-left, .group-teaser-right {
